Fixed styles and alignment issues of widget notes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,15 +112,28 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
-button {
-  @apply cursor-pointer;
-}
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  button {
+    @apply cursor-pointer;
+  }
+
+  .react-resizable-handle {
+    @apply hidden;
+  }
+
+  .react-grid-item.react-grid-placeholder {
+    background-color: grey !important;
+    background-image: url('/plus.svg') !important;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    @apply rounded-md;
   }
 }
